[metadata]
name = tlqb_tools
version = 0.0.2
author = tranlequybao
author_email = tranlequybaotk12@gmail.com
description = WHAT IS THE REASON YOU BUILD THIS PROJECT AND WHAT IT DOES
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TLQB/tlqb-tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find: 
python_requires = >=3.6
include_package_data = True